Internal location call

--- a/nginx-openresty/nginx.conf
+++ b/nginx-openresty/nginx.conf
@@ -16,5 +16,27 @@ http {
                 ngx.say("Hello World")
             }
         }
+
+        location /sum {
+            # only allow internal call
+            internal;
+
+            # example to cal the sum value
+            # here to complete the database or cache operations
+            # to seperate the basic madule and application logic
+            content_by_lua_block {
+                local args = ngx.req.get_uri_args()
+                ngx.say(tonumber(args.a) + tonumber(args.b))
+            }
+        }
+
+        location = /api/test {
+            content_by_lua_block {
+                local res = ngx.location.capture(
+                    "/sum", {args={a=3, b=8}}
+                )
+                ngx.say("status:", res.status, " response:", res.body)
+            }
+        }
     }
 }
