--- a/nginx-openresty/nginx.conf
+++ b/nginx-openresty/nginx.conf
@@ -17,7 +17,7 @@ http {
             }
         }
 
-        location /sum {
+        location = /add {
             # only allow internal call
             internal;
 
@@ -25,17 +25,57 @@ http {
             # here to complete the database or cache operations
             # to seperate the basic madule and application logic
             content_by_lua_block {
+                ngx.sleep(0.1)
                 local args = ngx.req.get_uri_args()
-                ngx.say(tonumber(args.a) + tonumber(args.b))
+                ngx.print(tonumber(args.a) + tonumber(args.b))
             }
         }
+
+        location = /sub {
+            internal;
+            content_by_lua_block {
+                ngx.sleep(0.1)
+                local args = ngx.req.get_uri_args()
+                ngx.print(tonumber(args.a) - tonumber(args.b))
+            }
+        } 
 
         location = /api/test {
             content_by_lua_block {
                 local res = ngx.location.capture(
-                    "/sum", {args={a=3, b=8}}
+                    "/add", {args={a=3, b=8}}
                 )
                 ngx.say("status:", res.status, " response:", res.body)
+            }
+        }
+
+        location = /app/test_parallels {
+            content_by_lua_block {
+                local start_time = ngx.now()
+                local res1, res2 = ngx.location.capture_multi(
+                    {
+                        {"/add", {args={a=3, b=8}}},
+                        {"/sub", {args={a=3, b=8}}}
+                    }
+                )
+                ngx.say("status:", res1.status, " response:", res1.body)
+                ngx.say("status:", res2.status, " response:", res2.body)
+                ngx.say("time used:", ngx.now() - start_time)
+            }
+        }
+
+        location = /app/test_queue {
+            content_by_lua_block {
+                local start_time = ngx.now()
+                local res1 = ngx.location.capture_multi(
+                    {{"/add", {args={a=3, b=8}}}}
+                )
+                local res2 = ngx.location.capture_multi(
+                    {{"/sub", {args={a=3, b=8}}}}
+                )
+                ngx.say("status:", res1.status, " response:", res1.body)
+                ngx.say("status:", res2.status, " response:", res2.body)
+                ngx.say("time used:", ngx.now() - start_time)
             }
         }
     }
