--- a/nginx-openresty/nginx.conf
+++ b/nginx-openresty/nginx.conf
@@ -78,5 +78,18 @@ http {
                 ngx.say("time used:", ngx.now() - start_time)
             }
         }
+
+        # External redirect
+        location = /destinition {
+            content_by_lua_block {
+                ngx.say([[Here is destinition]])
+            }
+        }
+
+        location = /external_redirect {
+            rewrite_by_lua_block {
+                return ngx.redirect('/destinition');
+            }
+        }
     }
 }
