Request URI arguments

--- a/nginx-openresty/nginx.conf
+++ b/nginx-openresty/nginx.conf
@@ -9,6 +9,7 @@ http {
 
     server {
         listen 80;
+        server_name localhost;
         
         location / {
             default_type text/html;
@@ -89,6 +90,29 @@ http {
         location = /external_redirect {
             rewrite_by_lua_block {
                 return ngx.redirect('/destinition');
+            }
+        }
+
+        # Request URI arguments
+        # get_uri_args() and get_post_args()
+        # ex: curl '127.0.0.1/print_param?a=1&b=2' -d 'c=3&d=4'
+        # [GET ] key:b v:2
+        # [GET ] key:a v:1
+        # [POST] key:d v:4
+        # [POST] key:c v:3
+        location /print_param {
+            content_by_lua_block {
+                local args = ngx.req.get_uri_args()
+                for k,v in pairs(args) do
+                    ngx.say("[GET ] key:", k, " value:", v)
+                end
+
+                -- must read the body before retreive
+                ngx.req.read_body()
+                local args = ngx.req.get_post_args()
+                for k,v in pairs(args) do
+                    ngx.say("[POST] key:", k, " value:", v)
+                end
             }
         }
     }
