Import lua jwt library

--- a/nginx-openresty/Dockerfile
+++ b/nginx-openresty/Dockerfile
@@ -1,7 +1,8 @@
 FROM openresty/openresty
 
+# Import jwt library
+COPY lua-resty-jwt-0.1.11/lib/resty /usr/local/openresty/lualib/resty
+
 WORKDIR /usr/local/openresty/nginx
 
-COPY nginx.conf ./conf/nginx.conf 
-
-
+COPY nginx.conf conf/nginx.conf
