Transfer the request URI arguments

--- a/nginx-openresty/nginx.conf
+++ b/nginx-openresty/nginx.conf
@@ -115,5 +115,21 @@ http {
                 end
             }
         }
+
+        # Convey the Request URI arguments
+        # Need ngx.encode_args to translate special characters
+        location = /transfer_param {
+            content_by_lua_block {
+                local res = ngx.location.capture(
+                    '/print_param',
+                    {
+                        method = ngx.HTTP_POST,
+                        args = ngx.encode_args({a = 1, b = '2&'}),
+                        body = ngx.encode_args({c = 3, d = '4&'})
+                    }
+                )
+                ngx.say(res.body)
+            }
+        }
     }
 }
