--- a/nginx-openresty/nginx.conf
+++ b/nginx-openresty/nginx.conf
@@ -1,5 +1,5 @@
 worker_processes  1;
-error_log logs/error.log;
+error_log logs/error.log debug;
 
 events {
     worker_connections 1024;
@@ -9,11 +9,44 @@ http {
 
     server {
         listen 80;
-        
+        default_type text/plain;
+
         location / {
             default_type text/html;
             content_by_lua_block {
                 ngx.say("Hello World")
+            }
+        }
+
+        location = /verify {
+            content_by_lua_block {
+                local cjson = require("cjson")
+                local hmac = require("resty.hmac")
+                local jwt = require("resty.jwt")
+
+                local jwt_token = "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9" ..
+                    ".eyJmb28iOiJiYXIifQ" ..
+                    ".VAoRL1IU0nOguxURF2ZcKR0SGKE1gCbqwyh8u2MLAyY"
+                
+                local jwt_obj = jwt:verify("lua-resty-jwt", jwt_token)
+                ngx.say(cjson.encode(jwt_obj))
+            }
+        }
+
+        location = /sign {
+            content_by_lua_block {
+                local cjson = require("cjson")
+                local hmac = require("resty.hmac")
+                local jwt = require("resty.jwt")
+
+                local jwt_token = jwt:sign(
+                    "lua-resty-jwt",
+                    {
+                        header={typ="JWT", alg="HS256"},
+                        payload={foo="bar"}
+                    }
+                )
+                ngx.say(jwt_token)
             }
         }
     }
