--- a/nginx-jwt/nginx.conf
+++ b/nginx-jwt/nginx.conf
@@ -20,31 +20,38 @@ http {
             }
         }
 
+        location = /greeting {
+            content_by_lua_block {
+                local hello = require("modules.hello")
+                ngx.say(hello.greeting("chiawei"))
+            }
+        }
+
+
         location = /verify_token {
             content_by_lua_block {
-                local cjson = require("cjson")
-                local jwt = require("resty.jwt")
+                -- local cjson = require("cjson")
+                -- local jwt = require("resty.jwt")
+                local validator = require("modules.p-jwt-validator")
 
                 local jwt_token = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9" ..
                     ".eyJwcm92aWRlciI6InRyeiIsImV4cGlyYXRpb24iOjEyMzQ1Njc4fQ" ..
                     ".V2wXePFoEAClu1L0kOiuibeUif81g4QMgYlhxp9kWzw"
                 
-                local jwt_obj = jwt:verify("trz_secret_key", jwt_token)
-                ngx.say(cjson.encode(jwt_obj))
+                local jwt_obj = validator.verify_token("trz_secret_key", jwt_token)
+                ngx.say(jwt_obj)
             }
         }
 
         location = /sign_token {
             content_by_lua_block {
-                local cjson = require("cjson")
-                local jwt = require("resty.jwt")
+                -- local cjson = require("cjson")
+                -- local jwt = require("resty.jwt")
+                local validator = require("modules.p-jwt-validator")
 
-                local jwt_token = jwt:sign(
+                local jwt_token = validator.sign_token(
                     "trz_secret_key",
-                    {
-                        header={typ="JWT", alg="HS256"},
-                        payload={provider="trz", expiration=12345678}
-                    }
+                    {provider="trz", expiration=12345678}
                 )
                 ngx.say(jwt_token)
             }
